@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.106 2005/12/21 15:12:37 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.107 2005/12/23 06:38:18 rocket Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -20,7 +20,8 @@ class generic_stage_target(generic_target):
 			"profile","snapshot","source_subpath"])
 		
 		self.valid_values.extend(["version_stamp","target","subarch","rel_type","profile",\
-			"snapshot","source_subpath","portage_confdir","cflags","cxxflags","chost","hostuse"])
+			"snapshot","source_subpath","portage_confdir","cflags","cxxflags",\
+			"ldflags","chost","hostuse"])
 		generic_target.__init__(self,addlargs,myspec)
 		
 		# map the mainarch we are running under to the mainarches we support for
