@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.13 2005/12/16 14:42:07 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.14 2005/12/23 06:38:18 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -14,7 +14,7 @@ class stage4_target(generic_stage_target):
 		self.required_values=[]
 		self.valid_values=self.required_values[:]
 		self.valid_values.extend(["stage4/use", "stage4/packages", "stage4/root_overlay", "stage4/fsscript", \
-					     "stage4/rcadd","stage4/rcdel"])
+				"stage4/rcadd","stage4/rcdel","chost","cflags","ldflags","cxxflags"])
 		generic_stage_target.__init__(self,spec,addlargs)
 
 	def set_pkgcache_path(self):
