@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.489 2005/12/21 21:03:50 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.490 2005/12/23 06:38:18 rocket Exp $
+
+  23 Dec 2005; Eric Edgar <rocket@gentoo.org> arch/sh.py,
+  modules/generic_stage_target.py, modules/stage4_target.py:
+  remove stray ' from arch/sh.py
 
   21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/stage1/stage1-controller.sh:
